# Debrid

./: .gitignore  README.md  makefile  pyproject.toml
debra/: __init__.py  exceptions.py  extras.py  realdebrid.py
debrid/: __init__.py  error_codes.py  exceptions.py  models.py  realdebrid.py
tests/: test_rd.py
